# frj-game-ngn

./: Cargo.toml  README.md  client-load-test  client-test  server
protobuf/: README.md  common.proto  frj_ngn.proto  love_letter.proto
src/backend-engine/: Cargo.toml
src/backend-engine/src/: game_manager.rs  grpc_server.rs  lib.rs  lost_cities_placeholder.rs  task.rs
src/backend-engine/src/game_manager/: api.rs  default_impl.rs  mod.rs  types.rs
src/backend-engine/src/grpc_server/: frj_server.rs  love_letter_stream.rs  mod.rs  stream_reader.rs
src/backend-engine/src/task/: mod.rs
src/backend-framework/: Cargo.toml  build.rs
src/backend-framework/src/: activity_timer.rs  common_types.rs  data_stream.rs  game_instance_manager.rs  holder.rs  lib.rs  placeholder.rs  prng.rs  shuffler.rs  streaming.rs
src/backend-framework/src/wire_api/: proto_frj_ngn.rs  type_converters.rs
src/backend-server/: Cargo.toml  build.rs
src/backend-server/src/: lib.rs  main.rs  server.rs
src/backend-server/src/wire_api/: mod.rs  proto_frj_ngn.rs
src/client-engine/: Cargo.toml  build.rs
src/client-engine/src/: lib.rs
src/client-engine/src/game_client/: mod.rs
src/client-engine/src/wire_api/: mod.rs  proto_frj_ngn.rs  type_converters.rs
src/client-engine/tests/: pre_game_integ_test.rs
src/client-test/: Cargo.toml
src/client-test/src/: client.rs  lib.rs  main.rs
src/client-test/src/test_cases/: love_letter_happy_path.rs  mod.rs  pre_game_stream.rs
src/common-build/: Cargo.toml
src/common-build/src/: lib.rs
src/love-letter-backend/: Cargo.toml
src/love-letter-backend/src/: deck.rs  events.rs  lib.rs  type_converters.rs  types.rs  types_test.rs
src/mastermind-backend/: Cargo.toml  user-interface-draft.md
src/mastermind-backend/src/: events.rs  lib.rs  types.rs
src/mastermind-backend/src/instance_manager/: mod.rs
src/mastermind-backend/src/state_machine/: data.rs  mod.rs
src/mastermind-backend/src/state_machine/transitions/: commit_row.rs  mod.rs  put_peg.rs  send_game_state.rs  submit_password.rs
(+19 files in other folders)
