[package]
name = "backend-framework"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[dependencies]
# 3p
async-trait = "0.1.24"
bytes = "0.5.4"
chrono = "0.4"
num_cpus = "1.12.0"
prost = "0.6.1"
rand = "=0.7.3"
rand_core = "=0.5.1"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2.0"

[build-dependencies]
# 3p
tonic-build = "0.2.0"
