[package]
name = "backend-server"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[[bin]]
name = "backend-server"
path = "src/main.rs"

[dependencies]
# 1p
backend-engine = { path = "../backend-engine" }

# 3p
async-trait = "0.1.24"
chrono = "0.4"
prost = "0.6.1"
rand = "=0.7.3"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.1"

[build-dependencies]
tonic-build = "0.1.1"
