[package]
name = "backend-server"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[[bin]]
name = "backend-server"
path = "src/main.rs"

[dependencies]
# 1p
backend-engine = { path = "../backend-engine" }
backend-framework = { path = "../backend-framework" }

# 3p
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2.0"
