[package]
name = "mastermind-backend"
version = "0.1.0"
authors = ["Alec Von Arx <al.vonarx@gmail.com>"]
edition = "2018"

[dependencies]
# 1p
backend-framework = { path = "../backend-framework" }

# 3p
async-trait = "0.1.24"
chrono = "0.4"
rand = "=0.7.3"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2.0"
